<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/export_share_menu"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/menu_title_share"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/export_copy_clipboard_menu"
            android:icon="@drawable/ic_round_content_paste"
            android:title="@string/menu_title_copy_clipboard"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/export_save_as_menu"
            android:title="@string/menu_title_save_as"
            app:showAsAction="never" />

    <item
            android:id="@+id/export_select_all_menu"
            android:title="@string/menu_title_select_all"
            app:showAsAction="never" />

    <item
            android:id="@+id/export_deselect_all_menu"
            android:title="@string/menu_title_deselect_all"
            app:showAsAction="never" />
</menu>
